[refactor] 서비스 코드 리팩토링
- 핵심 메서드인 createReview, getReview에서 가독성을 저하시키는 로직 캡슐화
- 불필요한 로직 간소화